--- a/index.html
+++ b/index.html
@@ -10,23 +10,29 @@
 		<header>
 			<div class="header-top">
 				<nav>
-					<ul class="left-nav-top">
+					<ul> 
 						<li><a href="#">Войти</a></li>
+						<li> | </li>
 						<li><a href="#">Оплата</a></li>
+						<li> | </li>
 						<li><a href="#">Доставка</a></li>
-						<li><a href="#">Контакты</a></li>					
-					</ul>
-
-					<ul class="right-nav-top">
+						<li> | </li>
+						<li><a href="#">Контакты</a></li>
+						<li></li>
+						<li></li>
+						<li></li>
 						<li><a href="#">RU</a></li>	
 						<li><a href="#">$</a></li>
-						<li><a href="#"><img src="#"> (товаров _)</a></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li><a href="#"><img src="#"> (товаров  12)</a></li>
 						<li><input type="text" name="search" class="search-nav"></li>				
 					</ul>
 				</nav>
 
 				<div class="header-logo">
-					<h3>ОНЛАЙН МАГАЗИН</h3>
+					<h3>онлайн магазин</h3>
 					<h1>ЦВЕТЫ ДОМА</h1>
 				</div>
 
@@ -43,7 +49,44 @@
 
 			<section>
 				<div class="carousel-product">
-					
+					<section>
+				<article>
+					<img src="project/img/product-h1.png">
+					<p>декоративно-цветущие</p>
+					<h4>Стефанотис</h4>
+					<small>Высота от 40 см</small>
+					<a href="#"><p>210 грн</p></a>
+					</br>
+					<a href="#"><span><img src="project/img/basket.png"></span>в корзину</a>
+				</article>
+					<article>
+						<img src="project/img/product-h2.png">
+						<p>декоративно-цветущие</p>
+						<h4>Стефанотис</h4>
+						<small>Высота от 40 см</small>
+						<a href="#"><p>210 грн</p></a>
+						</br>
+						<a href="#"><span><img src="project/img/basket.png"></span>в корзину</a>
+					</article>
+						<article>
+							<img src="project/img/product-h3.png">
+							<p>декоративно-цветущие</p>
+							<h4>Стефанотис</h4>
+							<small>Высота от 40 см</small>
+							<a href="#"><p>210 грн</p></a>
+							</br>
+							<a href="#"><span><img src="project/img/basket.png"></span>в корзину</a>
+						</article>
+							<article>
+								<img src="project/img/product-h4.png">
+								<p>декоративно-цветущие</p>
+								<h4>Стефанотис</h4>
+								<small>Высота от 40 см</small>
+								<a href="#"><p>210 грн</p></a>
+								</br>
+								<a href="#"><span><img src="project/img/basket.png"></span>в корзину</a>
+							</article>
+			</section>
 				</div>
 			</section>	
 			<section>
@@ -52,11 +95,118 @@
 		</header>
 
 		<div class="content">
-			
+			<nav>
+				<ul>
+					<li><a href="#">НОВЫЕ ПОСТУПЛЕНИЯ</a></li>
+					<li> | </li>
+					<li><a href="#">ПОПУЛЯРНОЕ</a></li>
+					<li> | </li>
+					<li><a href="#">ЛИДЕРЫ ПРОДАЖ</a></li>
+				</ul>
+			</nav>
+			<section>
+				<article>
+					<img src="project/img/product-c1.png">
+					<p>декоративно-цветущие</p>
+					<h4>Стефанотис</h4>
+					<small>Высота от 40 см</small>
+					<a href="#"><p>210 грн</p></a>
+					</br>
+					<a href="#"><span><img src="project/img/basket.png"></span>в корзину</a>
+				</article>
+					<article>
+						<img src="project/img/product-c2.png">
+						<p>декоративно-цветущие</p>
+						<h4>Стефанотис</h4>
+						<small>Высота от 40 см</small>
+						<a href="#"><p>210 грн</p></a>
+						</br>
+						<a href="#"><span><img src="project/img/basket.png"></span>в корзину</a>
+					</article>
+						<article>
+							<img src="project/img/product-c3.png">
+							<p>декоративно-цветущие</p>
+							<h4>Стефанотис</h4>
+							<small>Высота от 40 см</small>
+							<a href="#"><p>210 грн</p></a>
+							</br>
+							<a href="#"><span><img src="project/img/basket.png"></span>в корзину</a>
+						</article>
+							<article>
+								<img src="project/img/product-c4.png">
+								<p>декоративно-цветущие</p>
+								<h4>Стефанотис</h4>
+								<small>Высота от 40 см</small>
+								<a href="#"><p>210 грн</p></a>
+								</br>
+								<a href="#"><span><img src="project/img/basket.png"></span>в корзину</a>
+							</article>
+			</section>
 		</div>
 
 		<footer>
-			
+			<div class="footer-top-text">
+				<h3>Звоните нам бесплатно по телефону 38 (096) 987 65 43</h3>
+			</div>
+			<div class="footer-menu">
+				<div class="footer-category">
+					<ul>
+						<p>Категории</p>
+						<span>
+						<p><a href="#">- Декоративно-цветущие</a></p>
+						<p><a href="#">- Декоративно-лиственные</a></p>
+						<p><a href="#">- Кактусы и суккуленты</a></p>
+						<p><a href="#">- Орхидеи</a></p>
+						<p><a href="#">- Горшки и кашпо</a></p>
+						</span>
+					</ul>
+				</div>
+				<div class="footer-user">
+					<ul>						
+						<p>Моя учетная запись</p>
+						<span>
+						<p><a href="#">- Мои данные</a></p>
+						<p><a href="#">- Адреса доставки</a></p>
+						<p><a href="#">- Мои заказы</a></p>
+						<p><a href="#">- Мои возвраты</a></p>
+						<p><a href="#">- Мои скидки</a></p>
+						</span>
+					</ul>
+				</div>
+				<div class="footer-info">
+					<ul>						
+						<p>Информация</p>
+						<span>
+						<p><a href="#">- Скидки</a></p>
+						<p><a href="#">- Новые товары</a></p>
+						<p><a href="#">- Популярные товары</a></p>
+						<p><a href="#">- Акции</a></p>
+						<p><a href="#">- Обратная связь</a></p>
+						</span>
+					</ul>
+				</div>
+				<div class="footer-contact">
+					<ul>
+						<p>Контакты</p>
+						<span>
+						<p>ЧП Цветы Дома</p>
+						<p>Украина</p>
+						<p>Харьков, ул.Гагарина, 54</p>
+						
+						<p>Звоните: 38 (096) 987 65 43</p>
+						<p>E-mail:</p>
+						<p><a href="#">Home@flowers.com</a></p>
+						</span>						
+					</ul>
+				</div>
+			</div>
+				<form>
+					<input type="text" name="email" placeholder="Введите E-mail" class="footer-email">
+					<button>ПОДПИСАТЬСЯ</button>
+				</form>
+			<div class="footer-copyright">
+				<p>HOMEFLOWERS &copy 2017</p>
+			</div>
 		</footer>
 	</div>
 
