--- a/index.html
+++ b/index.html
@@ -33,16 +33,20 @@
 
 				<div class="header-logo">
 					<h3>онлайн магазин</h3>
-					<h1>ЦВЕТЫ ДОМА</h1>
+					<ul>
+						<li><hr></li>
+							<li><h1>ЦВЕТЫ ДОМА</h1></li>
+						<li><hr></li>	
+					</ul>
 				</div>
 
 				<div class="header-menu">
 					<ul>
-						<li><a href="#">Декоративно-цветущие</a></li>
-						<li><a href="#">Декоративно-лиственные</a></li>
-						<li><a href="#">Кактусы и суккуленты</a></li>
-						<li><a href="#">Орхидеи</a></li>
-						<li><a href="#">Горшки и кашпо</a></li>
+						<li><a href="category.html">Декоративно-цветущие</a></li>
+						<li><a href="category.html">Декоративно-лиственные</a></li>
+						<li><a href="category.html">Кактусы и суккуленты</a></li>
+						<li><a href="category.html">Орхидеи</a></li>
+						<li><a href="category.html">Горшки и кашпо</a></li>
 					</ul>
 				</div>
 			</div>	
@@ -94,20 +98,22 @@
 								<hr>
 							</article>
 				</div>
+			</section>
+			<section>
+				<div class="banner-header">
+					<img src="project/img/banner_home.jpg">
+				</div>
 			</section>	
-			<div class="banner-header">
-				<img src="project/img/banner_home.jpg">
-			</div>
 		</header>
 
 		<div class="content">
 			<nav>
 				<ul>
-					<li><a href="#">НОВЫЕ ПОСТУПЛЕНИЯ</a></li>
+					<li><a href="category.html">НОВЫЕ ПОСТУПЛЕНИЯ</a></li>
 					<li> | </li>
-					<li><a href="#">ПОПУЛЯРНОЕ</a></li>
+					<li><a href="category.html">ПОПУЛЯРНОЕ</a></li>
 					<li> | </li>
-					<li><a href="#">ЛИДЕРЫ ПРОДАЖ</a></li>
+					<li><a href="category.html">ЛИДЕРЫ ПРОДАЖ</a></li>
 				</ul>
 			</nav>
 			<section>
@@ -171,11 +177,11 @@
 					<ul>
 						<p>Категории</p>
 						<span>
-						<p><a href="#">- Декоративно-цветущие</a></p>
-						<p><a href="#">- Декоративно-лиственные</a></p>
-						<p><a href="#">- Кактусы и суккуленты</a></p>
-						<p><a href="#">- Орхидеи</a></p>
-						<p><a href="#">- Горшки и кашпо</a></p>
+						<p><a href="category.html">- Декоративно-цветущие</a></p>
+						<p><a href="category.html">- Декоративно-лиственные</a></p>
+						<p><a href="category.html">- Кактусы и суккуленты</a></p>
+						<p><a href="category.html">- Орхидеи</a></p>
+						<p><a href="category.html">- Горшки и кашпо</a></p>
 						</span>
 					</ul>
 				</div>
@@ -183,11 +189,11 @@
 					<ul>						
 						<p>Моя учетная запись</p>
 						<span>
-						<p><a href="#">- Мои данные</a></p>
-						<p><a href="#">- Адреса доставки</a></p>
-						<p><a href="#">- Мои заказы</a></p>
-						<p><a href="#">- Мои возвраты</a></p>
-						<p><a href="#">- Мои скидки</a></p>
+						<p><a href="category.html">- Мои данные</a></p>
+						<p><a href="category.html">- Адреса доставки</a></p>
+						<p><a href="category.html">- Мои заказы</a></p>
+						<p><a href="category.html">- Мои возвраты</a></p>
+						<p><a href="category.html">- Мои скидки</a></p>
 						</span>
 					</ul>
 				</div>
@@ -195,11 +201,11 @@
 					<ul>						
 						<p>Информация</p>
 						<span>
-						<p><a href="#">- Скидки</a></p>
-						<p><a href="#">- Новые товары</a></p>
-						<p><a href="#">- Популярные товары</a></p>
-						<p><a href="#">- Акции</a></p>
-						<p><a href="#">- Обратная связь</a></p>
+						<p><a href="category.html">- Скидки</a></p>
+						<p><a href="category.html">- Новые товары</a></p>
+						<p><a href="category.html">- Популярные товары</a></p>
+						<p><a href="category.html">- Акции</a></p>
+						<p><a href="category.html">- Обратная связь</a></p>
 						</span>
 					</ul>
 				</div>
