--- a/category.html
+++ b/category.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="wrap">
-		<header>
+		<div class="header-category-main">
 			<div class="header-top">
 				<nav>
 					<ul> 
@@ -26,7 +26,8 @@
 						<li></li>
 						<li></li>
 						<li></li>
-						<li><a href="#"><span><img src="project/img/basket.png"></span> (товаров  12)</a></li>
+						<li><img src="project/img/basket.png"></li>
+						<li><a href="#"> (товаров  12)</a></li>
 						<li><input type="text" name="search" class="search-nav" placeholder="Поиск"></li>				
 					</ul>
 				</nav>
@@ -50,7 +51,7 @@
 					</ul>
 				</div>
 			</div>	
-
+		</div>	
 		<div class="header-category">
 			<div class="header-category-left">	
 				<div class="breadcrumb">
@@ -78,41 +79,45 @@
 						<p>Эта наиболее обширная группа комнатных растений по праву считается наиболее ценной для выращивания в комнатах. Некоторые растения образуют ягоды и фрукты. Растения цветут в различные периоды года, некоторые - круглый год. Продолжительность цветения каждого вида колеблется от нескольких дней до нескольких месяцев. Среди множества цветущих растений встречаются однолетние, увядающие после первого цветения.</p>
 					</div>			
 			</div>	
-		</div>
-			<section>
-				<aside>
+			</div>
+			
+	
+		<div class="category-content">
+			<div class="category-content-left">					
 					<h3>Скидки и Акции</h3>
 					<hr>
 					<ul>
 						<li>
-							<img src="project/img/product-c1.png">
+							<img src="project/img/product-c2.png">
 							<p>декоративно-цветущие</p>
 							<h4>Азалия белая</h4>
 							<small>Высота от 25 см</small>
-							<a href="#"><p>55 грн</p></a>
+							<ul><del>75 грн </del> 55 грн</ul>
 							</br>					
 						</li>
 						<li>
-							<img src="project/img/product-c1.png">
+							<img src="project/img/product-c2.png">
 							<p>декоративно-цветущие</p>
 							<h4>Азалия белая</h4>
 							<small>Высота от 25 см</small>
-							<a href="#"><p>55 грн</p></a>
+							<ul><del>75 грн </del> 55 грн</ul>
 							</br>					
 						</li>
 						<li>
-							<img src="project/img/product-c1.png">
+							<img src="project/img/product-c2.png">
 							<p>декоративно-цветущие</p>
 							<h4>Азалия белая</h4>
 							<small>Высота от 25 см</small>
-							<a href="#"><p>55 грн</p></a>
+							<ul><del>75 грн </del> 55 грн</ul>
 							</br>					
 						</li>
 					</ul>
-				</aside>
+			</div>
+			<div class="category-content-right">
 				
-			</section>	
-		</header>
+			</div>	
+				
+		</div>	
 	
 
 		<footer>
