--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 						<li></li>
 						<li></li>
 						<li></li>
-						<li><a href="#"><span><img src="project/img/basket.png"></span> (товаров  12)</a></li>
+						<li><img src="project/img/basket.png"></li>
+						<li><a href="#"> (товаров  12)</a></li>
 						<li><input type="text" name="search" class="search-nav" placeholder="Поиск"></li>				
 					</ul>
 				</nav>
@@ -118,16 +119,16 @@
 			</nav>
 			<section>
 				<article>
-					<hr>
-					<img src="project/img/product-c1.png">
-					<p>декоративно-цветущие</p>
-					<h4>Стефанотис</h4>
-					<small>Высота от 40 см</small>
-					<a href="#"><p>210 грн</p></a>
-					</br>
-					<a href="#"><img src="project/img/in_basket.jpg"></a>
-					<br>
-					<hr>
+						<hr>
+						<img src="project/img/product-c3.png">
+						<p>декоративно-цветущие</p>
+						<h4>Стефанотис</h4>
+						<small>Высота от 40 см</small>
+						<p>210 грн</p>
+						</br>
+						<a href="#"><img src="project/img/in_basket.jpg"></a>
+						<br>
+						<hr>
 				</article>
 					<article>
 						<hr>
@@ -135,7 +136,7 @@
 						<p>декоративно-цветущие</p>
 						<h4>Стефанотис</h4>
 						<small>Высота от 40 см</small>
-						<a href="#"><p>210 грн</p></a>
+						<p>210 грн</p>
 						</br>
 						<a href="#"><img src="project/img/in_basket.jpg"></a>
 						<br>
@@ -147,7 +148,7 @@
 							<p>декоративно-цветущие</p>
 							<h4>Стефанотис</h4>
 							<small>Высота от 40 см</small>
-							<a href="#"><p>210 грн</p></a>
+							<p>210 грн</p>
 							</br>
 							<a href="#"><img src="project/img/in_basket.jpg"></a>
 							<br>
@@ -159,7 +160,7 @@
 								<p>декоративно-цветущие</p>
 								<h4>Стефанотис</h4>
 								<small>Высота от 40 см</small>
-								<a href="#"><p>210 грн</p></a>
+								<p>210 грн</p>
 								</br>
 								<a href="#"><img src="project/img/in_basket.jpg"></a>
 								<br>
