--- a/category.html
+++ b/category.html
@@ -43,11 +43,11 @@
 
 				<div class="header-menu">
 					<ul>
-						<li><a href="#">Декоративно-цветущие</a></li>
-						<li><a href="#">Декоративно-лиственные</a></li>
-						<li><a href="#">Кактусы и суккуленты</a></li>
-						<li><a href="#">Орхидеи</a></li>
-						<li><a href="#">Горшки и кашпо</a></li>
+						<li><a href="category.html">Декоративно-цветущие</a></li>
+						<li><a href="category.html">Декоративно-лиственные</a></li>
+						<li><a href="category.html">Кактусы и суккуленты</a></li>
+						<li><a href="category.html">Орхидеи</a></li>
+						<li><a href="category.html">Горшки и кашпо</a></li>
 					</ul>
 				</div>
 			</div>	
@@ -89,31 +89,37 @@
 					<hr>
 					<ul>
 						<li>
+							<a href="product.html">
 							<div class="shares"><p>-25%</p></div>
 							<img src="project/img/product-c2.png">
 							<p>декоративно-цветущие</p>
 							<h4>Азалия белая</h4>
 							<small>Высота от 25 см</small>
 							<ul><del>75 грн </del> <h4> 55 грн</h4></ul>
-							</br>					
+							</br>
+							</a>					
 						</li>
 						<li>
+							<a href="product.html">
 							<div class="shares"><p>-25%</p></div>
 							<img src="project/img/product-c2.png">
 							<p>декоративно-цветущие</p>
 							<h4>Азалия белая</h4>
 							<small>Высота от 25 см</small>
 							<ul><del>75 грн </del> <h4> 55 грн</h4></ul>
-							</br>					
+							</br>
+							</a>					
 						</li>
 						<li>
+							<a href="product.html">
 							<div class="shares"><p>-25%</p></div>
 							<img src="project/img/product-c2.png">
 							<p>декоративно-цветущие</p>
 							<h4>Азалия белая</h4>
 							<small>Высота от 25 см</small>
 							<ul><del>75 грн </del> <h4> 55 грн</h4></ul>
-							</br>					
+							</br>
+							</a>					
 						</li>
 						<li>
 							<img src="project/img/banner_category.jpg" style="max-width: 100%; padding: 0;">
@@ -259,11 +265,11 @@
 					<ul>
 						<p>Категории</p>
 						<span>
-						<p><a href="#">- Декоративно-цветущие</a></p>
-						<p><a href="#">- Декоративно-лиственные</a></p>
-						<p><a href="#">- Кактусы и суккуленты</a></p>
-						<p><a href="#">- Орхидеи</a></p>
-						<p><a href="#">- Горшки и кашпо</a></p>
+						<p><a href="category.html">- Декоративно-цветущие</a></p>
+						<p><a href="category.html">- Декоративно-лиственные</a></p>
+						<p><a href="category.html">- Кактусы и суккуленты</a></p>
+						<p><a href="category.html">- Орхидеи</a></p>
+						<p><a href="category.html">- Горшки и кашпо</a></p>
 						</span>
 					</ul>
 				</div>
