--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="wrap">
 		<header>
 			<div class="header-top">
-				<nav>
+				<nav class="grid">
 					<ul> 
 						<li><a href="#">Войти</a></li>
 						<li> | </li>
