--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
 				<div class="carousel-product">
 				<article>
 					<hr>
-					<img src="project/img/product-h1.png">					
-					<h4>Финиковая пальма</h4>
-					<small>Высота от 40 см</small>
-					<h5>от 199 грн</h5>
+					<a href="product.html">
+						<img src="project/img/product-h1.png">					
+						<h4>Финиковая пальма</h4>
+						<small>Высота от 40 см</small>
+						<h5>от 199 грн</h5>
+					</a>
 					</br>
 					<a href="#"><img src="project/img/in_basket.jpg"></a>
 					<br>
@@ -69,10 +71,12 @@
 				</article>
 					<article>
 						<hr>
-						<img src="project/img/product-h2.png">
-						<h4>Кофейное дерево</h4>
-						<small>Высота от 30 см</small>
-						<h5>от 99 грн</h5>
+						<a href="product.html">
+							<img src="project/img/product-h2.png">
+							<h4>Кофейное дерево</h4>
+							<small>Высота от 30 см</small>
+							<h5>от 99 грн</h5>
+						</a>	
 						</br>
 						<a href="#"><img src="project/img/in_basket.jpg"></a>
 						<br>
@@ -80,10 +84,12 @@
 					</article>
 						<article>
 							<hr>
-							<img src="project/img/product-h3.png">
-							<h4>Монстера Вариегата</h4>
-							<small>Высота от 130 см</small>
-							<h5>от 1200 грн</h5>
+							<a href="product.html">
+								<img src="project/img/product-h3.png">
+								<h4>Монстера Вариегата</h4>
+								<small>Высота от 130 см</small>
+								<h5>от 1200 грн</h5>
+							</a>
 							</br>
 							<a href="#"><img src="project/img/in_basket.jpg"></a>
 							<br>
@@ -91,10 +97,12 @@
 						</article>
 							<article>
 								<hr>
-								<img src="project/img/product-h4.png">
-								<h4>Пахира Акватика</h4>
-								<small>Высота от 90 см</small>
-								<h5>от 560 грн</h5>
+								<a href="product.html">
+									<img src="project/img/product-h4.png">
+									<h4>Пахира Акватика</h4>
+									<small>Высота от 90 см</small>
+									<h5>от 560 грн</h5>
+								</a>
 								</br>
 								<a href="#"><img src="project/img/in_basket.jpg"></a>
 								<br>
